.xmonad/xmonad.errors

xmonad.hs:81:23: error: parse error on input ‘def’
   |
81 |     , handleEventHook def <+> fullscreenEventHook 
   |                       ^^^
